Aligned product grid to center so it shows up correctly with few products

--- a/ui.apps/src/main/content/jcr_root/apps/we-retail/components/content/product-grid/clientlib/less/product-grid.less
+++ b/ui.apps/src/main/content/jcr_root/apps/we-retail/components/content/product-grid/clientlib/less/product-grid.less
@@ -22,6 +22,7 @@
         .list-unstyled;
         font-size: 0;
         width: 100%;
+        text-align: center;
     }
 
     .foundation-list-item {
